tests/e2e/authz-server/match-conditions/failure-policy-fail/error-with-false/policy.yaml
# yaml-language-server: $schema=../../../../../../.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: policy
spec:
  failurePolicy: Fail
  matchConditions:
  - name: error
    expression: '(2 / 0) == 1'
  - name: 'false'
    expression: 'false'
  deny:
  - response: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request")
        .Response()
